helm/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  clusterName: ""
  creationTimestamp: 2018-09-05T15:52:26Z
  name: api-statements-internal-virtualservice
  namespace: dev
spec:
  hosts:
  - api-statements-dev.pismolabs.io
  http:
  - match:
    - uri:
        regex: .+
    route:
    - destination:
        host: api-statements-666-123
        port:
          number: 8005
